app/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-app-dev
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
