app/overlays/dev/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-dev
  namespace: todo-app-dev
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  rules:
    - host: todo.app
      http:
        paths:
          - path: /dev
            pathType: Prefix
            backend:
              service:
                name: todo-gitops
                port:
                  number: 8080
